extensions for logo
